--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Custom Video Player</title>
+    <title>lmvp</title>
     <style>
+      html {
+        font-family: sans-serif;
+      }
       .video-player {
         position: relative;
         width: 640px;
@@ -224,5 +227,6 @@
       // Show the big play button initially
       playButton.style.display = "block";
     </script>
+    lmvp (LearnModu Video Player) is a HTML5 video player made for webpages. Learn more over <a href="https://github.com/LearnModu/lmvp">here.</a>
   </body>
 </html>
