--- a/index.html
+++ b/index.html
@@ -227,6 +227,6 @@
       // Show the big play button initially
       playButton.style.display = "block";
     </script>
-    lmvp (LearnModu Video Player) is a HTML5 video player made for webpages. Learn more over <a href="https://github.com/LearnModu/lmvp">here.</a>
+    <p>lmvp (LearnModu Video Player) is a HTML5 video player made for webpages. Learn more over <a href="https://github.com/LearnModu/lmvp">here.</a></p>
   </body>
 </html>
