--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
     </style>
   </head>
   <body>
-    <h1>LearnModu Video Player v0.0.1</h1>
+    <img src="./static/nimble1.png">
+    <br>
     <div class="video-player">
       <video width="640" height="360" poster="your-poster.jpg">
         <source src="miracleos.mp4" type="video/mp4" />
@@ -227,6 +228,6 @@
       // Show the big play button initially
       playButton.style.display = "block";
     </script>
-    <p>lmvp (LearnModu Video Player) is a HTML5 video player made for webpages. Learn more over <a href="https://github.com/LearnModu/lmvp">here.</a></p>
+    <p>nimble is a HTML5 video player made for webpages. Learn more over <a href="https://github.com/LearnModu/nimble">here.</a></p>
   </body>
 </html>
