--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>lmvp</title>
+    <title>nimble</title>
     <style>
       html {
         font-family: sans-serif;
