--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </style>
   </head>
   <body>
-    <img src="./static/nimble1.png">
+    <img src="./static/nimble1.png" width="450" height="150">
     <br>
     <div class="video-player">
       <video width="640" height="360" poster="your-poster.jpg">
